# OSU-ECE342-Oscilloscope

./: .gitignore  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml
.github/workflows/: application.yaml  client.yaml  common.yaml
app/: package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src-tauri/src/theme/: default.rs
app/src/styles/: global.css
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/src/: lib.rs  main.rs  serial.rs  theme.rs  titlebar.rs
backend/src/theme/: default.rs  linux.rs
backend/src/titlebar/: linux.rs  macos.rs  windows.rs
client/: biome.json
client/src/: App.tsx  main.tsx
client/src-tauri/: Cargo.toml
client/src-tauri/src/: lib.rs  theme.rs
client/src-tauri/src/theme/: linux.rs
client/src/styles/: theme.css
common/: Cargo.toml
common/src/: frame.rs  lib.rs  log.rs  message.rs
docs/: .gitignore  block-diagram.typ  project.typ  references.yaml  shitty-gemini-block-diagram.typ  template.typ
docs/blocks/: analog.typ  block-template.typ  power.typ
docs/data/: calibration.csv
firmware/: Cargo.toml
frontend/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  bindings.ts  main.tsx  routeTree.gen.ts
frontend/src/components/: button.tsx  titlebar.tsx
frontend/src/hooks/: use-is-maximized.ts
frontend/src/lib/: primative.ts
frontend/src/routes/: __root.tsx  home.tsx  index.tsx  test.tsx
frontend/src/styles/: global.css
hardware/: 1V65.kicad_sym  PSU.kicad_sch  RP2350_60QFN_minimal.kicad_pcb  RP2350_60QFN_minimal.kicad_pro  RP2350_60QFN_minimal.kicad_sch  Trigger.kicad_sch  VSYS.kicad_sym  analog.kicad_pro  analog.kicad_sch  fp-lib-table  hardware.kicad_pro  hardware.kicad_sch  sym-lib-table
hardware/libraries/Adafruit_4677/: 4677.dcm
hardware/libraries/BAT54T1G/KiCADv6/: 2026-01-22_23-09-40.kicad_sym
hardware/libraries/CustomTestPoints.pretty/: TestPoint_0603_1608Metric.kicad_mod
hardware/libraries/LIB_73101-0570/KiCad/: 73101-0570.dcm  73101-0570.kicad_sym  73101-0570.lib  73101-0570.mod  731010570.kicad_mod
hardware/libraries/LM4040A20IDBZT/: LM4040A20IDBZT.kicad_sym  SOT95P237X112-3N.kicad_mod
hardware/libraries/MCP6572T_E_SN/: MCP6272-E_SN.kicad_sym  SOIC127P600X175-8N.kicad_mod
hardware/libraries/OPA320/KiCADv6/: OPA320.kicad_sym
hardware/libraries/PSRAM_Adafruit_4677/: 4677.kicad_sym  4677.lib  4677.mod  SOIC127P600X175-8N.kicad_mod
hardware/libraries/TL3365AF180QG/: SW_TL3365AF180QG.kicad_mod
hardware/libraries/TLP3441_TP_F/KiCADv6/: TLP3441.kicad_sym
hardware/libraries/USBC_1332645/: 1332645.stp  PHOENIX_1332645.kicad_mod
hardware/libraries/USBC_UJ20-C-H-G-SMT-1-P16-TR/: SAMESKY_UJ20-C-H-G-SMT-1-P16-TR.kicad_mod
hardware/libraries/switch/: ADG621.kicad_sym
hardware/libraries/switch/footprints.pretty/: RM_10_ADI-L.kicad_mod  RM_10_ADI-M.kicad_mod  RM_10_ADI.kicad_mod
hardware/libraries/ul_TLV271SN1T1G/KiCADv6/: 2026-01-22_19-05-01.kicad_sym
hardware/ul_MCP47FEB02A0T-E-ST/KiCADv6/: 2026-01-29_20-30-20.kicad_sym
hardware/ul_MCP47FEB02A0T-E-ST/KiCADv6/footprints.pretty/: TSSOP8_ST_MCH-M.kicad_mod
src/: App.css  App.tsx  bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  theme.rs
src-tauri/src/theme/: default.rs  linux.rs
test-firmware/: Cargo.toml
test-firmware/src/: main.rs
(+12 files in other folders)
