[package]
name = "oscope-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["Elliot Nash", "Yahir Raygoza Cortez", "Oliver Siemens"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oscope_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
common = { path = "../common" }

tokio = { version = "1", features = ["full"] }
# Used for serial communication
serial2-tokio = "0.1"
# Used just for device discovery
serialport = "4"

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc.22", features = ["serde"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript", "derive"] }

# Linux only dependencies
[target.'cfg(target_os = "linux")'.dependencies]
linux_theme = "0.2.1"
cssparser-color = "0.1.0"
gio = "0.18"
glib = "0.18"
