[package]
name = "common"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["serde/std"]
alloc = ["serde/alloc"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
log = "0.4"

[dev-dependencies]
postcard = { version = "1.1", features = ["postcard-derive", "use-std"]}